--- a/index.html
+++ b/index.html
@@ -237,8 +237,9 @@
 										<li class="icon solid fa-home">57/2 Pathirage Road<br />
 										Gangodawila, Nugegoda, 10250<br />
 										Sri Lanka
-										<li class="icon solid fa-home">No. 6 A, Travessa de santo ildefonso<br>
-										1200-807, Rato, Lisbon, Portugal </li>
+										<li class="icon solid fa-home">R. dos Prazeres, 5, Res-do-chao, DTO<br>
+										Bairro das Maroitas e cachoeiras, Vala de fugueira<br>
+										2695-642, Sao Joao Da Talha, Portugal </li>
 									</li>
 									</ul>
 								</section>
