--- a/work.html
+++ b/work.html
@@ -141,39 +141,40 @@
 								</ul>
 							</nav>
 					<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>Contact me</h2>
-									</header>
-									<p></p>
-									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">prasadisenadeera1991@gmail.com</a></li>
-										<li class="icon solid fa-phone">(+94) 712-617-955</li>
-										<li class="icon solid fa-home">57/2 Pathirage Road<br />
-										Gangodawila, Nugegoda, 10250<br />
-										Sri Lanka
-										<li class="icon solid fa-home">No. 6 A, Travessa de santo ildefonso<br>
-										1200-807, Rato, Lisbon, Portugal </li>
-									</li>
-									</ul>
-								</section>
+					<section>
+						<header class="major">
+							<h2>Contact me</h2>
+						</header>
+						<p></p>
+						<ul class="contact">
+							<li class="icon solid fa-envelope"><a href="#">prasadisenadeera1991@gmail.com</a></li>
+							<li class="icon solid fa-phone">(+94) 712-617-955</li>
+							<li class="icon solid fa-home">57/2 Pathirage Road<br />
+							Gangodawila, Nugegoda, 10250<br />
+							Sri Lanka
+							<li class="icon solid fa-home">R. dos Prazeres, 5, Res-do-chao, DTO<br>
+							Bairro das Maroitas e cachoeiras, Vala de fugueira<br>
+							2695-642, Sao Joao Da Talha, Portugal </li>
+						</li>
+						</ul>
+					</section>
 
-							<!-- Footer -->
-								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-								</footer>
-
-						</div>
-					</div>
+				<!-- Footer -->
+					<footer id="footer">
+						<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+					</footer>
 
 			</div>
+		</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+</div>
 
-	</body>
+<!-- Scripts -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/browser.min.js"></script>
+<script src="assets/js/breakpoints.min.js"></script>
+<script src="assets/js/util.js"></script>
+<script src="assets/js/main.js"></script>
+
+</body>
 </html>
