--- a/index.html
+++ b/index.html
@@ -81,6 +81,16 @@
 				</p>
 			</div>
 		</article>
+
+		<article>
+			<div class="content">
+				<h3>GNSS summer school 2019 in Tokyo, Japan</h3>
+				<p style="text-align:justify"> Organized by Faculty of Marine Technology, Tokyo University of Marine Science and Technology (TUMSAT) <br><br>
+				<b>Main Subjects:</b> Introduction to QZSS, GLONASS, BeiDou and Galileo Signals, Navigation message structures of GNSS signals, Front- end Architectures,
+				 Differential GPS Real-time positioning using GNSS </p>
+			</div>
+		</article>
+
 	</section>
 
 
