--- a/work.html
+++ b/work.html
@@ -46,11 +46,11 @@
 		<ol><h3><li>Geospatial Analyst,<a href="www.staruplo.com"> Staruplo</a>, SANJOTEC – Parque de Ciência e Tecnologia,Portugal.             [01.03.2021 - Present]</li></h3>
 		
 		<p style="text-align:justify"> Staruplo is a Portuguese company based in Sao Joa de Madeira that provides artificial intelligence solutions and 
-			prototyping services in the fields of geospatial intelligence to promote the sustainability of our planet. I am currently working as a 
-			geospatial analyst at staruplo and focus on:
+			prototyping services in the fields of Geospatial Intelligence to promote the sustainability of our planet. I am currently working as a 
+			Geospatial analyst at Staruplo and focus on:
 			<ol>
 				<li>Designing and developing geospatial solutions for various projects focuses on global issues of public concern to improve life on earth. </li>
-				<li>supporting in the development of geospatial analysis for the geospatial intelligence platform developed by the company.</li>
+				<li>Supporting in the development of geospatial analysis for the geospatial intelligence platform developed by the company.</li>
 				<li>Experiencing with spatial analysis software including ArcGIS Pro, ArcGIS online and Developer, ENVI, ErdasImagine and etc.</li>
 			</ol>
 		</p>
@@ -58,7 +58,7 @@
 		<h3><li>Assistant Lecturer, <a href="http://www.sab.ac.lk/geo/"> Faculty of Geomatics, Sabaragamuwa University of Sri Lanka.             [04.12.2017-01.09.2019] </a></li></h3>
 
 		<p style="text-align:justify"> The Sabaragamuwa University of Sri Lanka (SUSL)  is a public university in Belihuloya, Balangoda, Sri Lanka. 
-			It was founded on 20 November 1991 and consists of Eight faculties including the faculty of Geomatics which is one of the two Institutes
+			It was founded on 20 November 1991 and consists of eight faculties including the Faculty of Geomatics which is one of the two institutes
 			 for geomatics related degrees in Sri lanka and is made of well qualified staff and the latest technological resources. In 2018, I was 
 			 promoted as an assistant lecturer in the Department Remote Sensing and GIS, the Faculty of Geomatics after serving as an academic supportive
 			  staff member in the same department for a year. my duties were included,
@@ -68,15 +68,15 @@
 					Sensing for undergraduates</li>
 				<li>Proctored examinations and led their preparatory workshops, providing class-pertinent materials</li>
 				<li>Worked as a resource person for software and instrument training/use, as well as a student counselor</li>
-			</ol> and the same time, I worked as a visiting intructor for the master of surveying science degree program conduct by the Faculty of Graduate studies, 
-			Sabaragamuwa University of Sri Lanka</p>
+			</ol> and the same time, I worked as a visiting intructor for the Master of Surveying science degree program conduct by the Faculty of Graduate studies  
+			in Sabaragamuwa University of Sri Lanka</p>
 	
 
 		
 		<h3><li>Research assistant,<a href="http://geoinfo.ait.ac.th/"> Geo informatics Centre</a>, <a href="https://www.ait.ac.th/Asian"> Asian institute of Technology</a>, Thailand              [01.06.2017-01.09.2017]</li></h3>
 		
-		<p style="text-align:justify"> The Geoinformatics Center (GIC) is a leading remote sensing and GIS organization in Southeast Asia. That is oriented towards 
-			the implementation of projects in connection with GIS and remote sensing. Every year the Geospatial Center invites university students with a background 
+		<p style="text-align:justify"> The Geoinformatics Center (GIC) is a leading Remote sensing and GIS organization in Southeast Asia. That is oriented towards 
+			the implementation of projects in connection with GIS and Remote sensing. Every year the Geospatial center invites university students with a background 
 			in geospatial fields to participate in internships at AIT to engage with staff in various ongoing projects as well 
 			as attend training programs conducted by the center which help to foster their background knowledge and offer 
 			experiences in new areas during the internship. <br><br>
