--- a/work.html
+++ b/work.html
@@ -41,7 +41,7 @@
 		</header>
 
 		<div class="main">
-		<ol><h3><li>Geospatial Analyst,<a href="www.staruplo.com"> Staruplo</a>, SANJOTEC – Parque de Ciência e Tecnologia,Portugal.             [01.03.2021 - Present]</li></h3>
+		<ol><h3><li>Geospatial Analyst,<a href="https://staruplo.com/"> Staruplo</a>, SANJOTEC – Parque de Ciência e Tecnologia,Portugal.             [01.03.2021 - Present]</li></h3>
 		
 		<p style="text-align:justify"> Staruplo is a Portuguese company based in Sao Joa de Madeira that provides artificial intelligence solutions and 
 			prototyping services in the fields of Geospatial Intelligence to promote the sustainability of our planet. I am currently working as a 
