--- a/remote.html
+++ b/remote.html
@@ -171,6 +171,7 @@
 						<ul class="contact">
 							<li class="icon solid fa-envelope"><a href="#">prasadisenadeera1991@gmail.com</a></li>
 							<li class="icon solid fa-phone">(+94) 712-617-955</li>
+							<li class="icon solid fa-phone">(+351) 924773455</li>
 							<li class="icon solid fa-home">57/2 Pathirage Road<br />
 							Gangodawila, Nugegoda, 10250<br />
 							Sri Lanka
