--- a/work.html
+++ b/work.html
@@ -41,16 +41,27 @@
 		</header>
 
 		<div class="main">
-		<ol><h3><li>Geospatial Analyst,<a href="https://staruplo.com/"> Staruplo</a>, SANJOTEC – Parque de Ciência e Tecnologia,Portugal.             [01.03.2021 - Present]</li></h3>
+		<ol><h3><li>Data Analyst Engineer,<a href="https://staruplo.com/"> Cleanwatts Digital S.A.</a>, Coimbra,Portugal.             [03.01.2023 - Present]</li></h3>
+			<p style="text-align:justify"> Duties and Responsibilities,
+						<ol>
+						<li>Developing geospatial analysing tools and web GIS portals (2D/ 3D) to optimize the collection and managing the information about the energy communities.</li>
+						<li>Facilitating geospatial solutions to identify the suitable locations to use as renewable energy sites.</li></ol>
+			</p>
 		
+
+		<ol><h3><li>Geospatial Analyst,,<a href="https://staruplo.com/"> Staruplo</a>, SANJOTEC – Parque de Ciência e Tecnologia,Portugal.             [01.03.2021 - 01.01.2023]</li></h3>
 		<p style="text-align:justify"> Staruplo is a Portuguese company based in Sao Joa de Madeira that provides artificial intelligence solutions and 
-			prototyping services in the fields of Geospatial Intelligence to promote the sustainability of our planet. I am currently working as a 
-			Geospatial analyst at Staruplo and focus on:
-			<ol>
-				<li>Designing and developing geospatial solutions for various projects focuses on global issues of public concern to improve life on earth. </li>
-				<li>Supporting in the development of geospatial analysis for the geospatial intelligence platform developed by the company.</li>
-				<li>Experiencing with spatial analysis software including ArcGIS Pro, ArcGIS online and Developer, ENVI, ErdasImagine and etc.</li>
-			</ol>
+					prototyping services in the fields of Geospatial Intelligence to promote the sustainability of our planet. In starupplo I worked as a 
+					Geospatial analyst at Staruplo to:
+					<ol>
+					<li>Designed and developed geospatial solutions to address the global issues of public concern to improve life on Earth,
+						<li>Agriculture and Vegetation: Satellite image derived products to assess the vegetation health, water stress and estimate the yield of the agricultural sites.
+						<li>Prevention and Defence: To identify the flood, wildfire, and landside potential areas in Portugal</li>
+						<li>Climate change and renewable energy: Facilitating geospatial solutions to make use of renewable energies such as solar and wind farms to minimize the world's rapid climate changes.</li>
+						<li>Urban planning: Providing geospatial solutions to identify and quantify urbanization to minimize urban sprawl </li></li>
+					<li>Served as the leader of the geospatial team to organize, manage the resources and examine the progress status of the projects.</li>
+					<li>Served as a proxy for communications between the website development, business, and geospatial teams.</li>
+					</ol>
 		</p>
 
 		<h3><li>Assistant Lecturer, <a href="http://www.sab.ac.lk/geo/"> Faculty of Geomatics, Sabaragamuwa University of Sri Lanka.             [04.12.2017-01.09.2019] </a></li></h3>
