--- a/work.html
+++ b/work.html
@@ -43,9 +43,10 @@
 		<div class="main">
 		<ol><h3><li>Data Analyst Engineer,<a href="https://portugal.cleanwatts.energy/?campaign_source=f4e165e4-1c60-ed11-9561-6045bd8f91d8&gclid=Cj0KCQiAgaGgBhC8ARIsAAAyLfG8Ougne0QoMcDDlL7_K-dtHqkjnv2kslDn8v1S6EIT09eLPedyp-saAq9MEALw_wcB"> Cleanwatts Digital S.A.</a>, Coimbra,Portugal.             [03.01.2023 - Present]</li></h3>
 			<p style="text-align:justify"> Duties and Responsibilities,
-						<ol>
+					<ol>
 						<li>Developing geospatial analysing tools and web GIS portals (2D/ 3D) to optimize the collection and managing the information about the energy communities.</li>
-						<li>Facilitating geospatial solutions to identify the suitable locations to use as renewable energy sites.</li></ol>
+						<li>Facilitating geospatial solutions to identify the suitable locations to use as renewable energy sites.</li>
+					</ol>
 			</p>
 		
 
@@ -53,15 +54,15 @@
 		<p style="text-align:justify"> Staruplo is a Portuguese company based in Sao Joa de Madeira that provides artificial intelligence solutions and 
 					prototyping services in the fields of Geospatial Intelligence to promote the sustainability of our planet. In starupplo I worked as a 
 					Geospatial analyst at Staruplo to:
-					<ol>
+				<ol>
 					<li>Designed and developed geospatial solutions to address the global issues of public concern to improve life on Earth,
 						<li>Agriculture and Vegetation: Satellite image derived products to assess the vegetation health, water stress and estimate the yield of the agricultural sites.
 						<li>Prevention and Defence: To identify the flood, wildfire, and landside potential areas in Portugal</li>
 						<li>Climate change and renewable energy: Facilitating geospatial solutions to make use of renewable energies such as solar and wind farms to minimize the world's rapid climate changes.</li>
-						<li>Urban planning: Providing geospatial solutions to identify and quantify urbanization to minimize urban sprawl </li></li>
+						<li>Urban planning: Providing geospatial solutions to identify and quantify urbanization to minimize urban sprawl </li>
 					<li>Served as the leader of the geospatial team to organize, manage the resources and examine the progress status of the projects.</li>
 					<li>Served as a proxy for communications between the website development, business, and geospatial teams.</li>
-					</ol>
+				</ol>
 		</p>
 
 		<h3><li>Assistant Lecturer, <a href="http://www.sab.ac.lk/geo/"> Faculty of Geomatics, Sabaragamuwa University of Sri Lanka.             [04.12.2017-01.09.2019] </a></li></h3>
