--- a/work.html
+++ b/work.html
@@ -42,19 +42,18 @@
 
 		<div class="main">
 		<ol><h3><li>Data Analyst Engineer,<a href="https://portugal.cleanwatts.energy/?campaign_source=f4e165e4-1c60-ed11-9561-6045bd8f91d8&gclid=Cj0KCQiAgaGgBhC8ARIsAAAyLfG8Ougne0QoMcDDlL7_K-dtHqkjnv2kslDn8v1S6EIT09eLPedyp-saAq9MEALw_wcB"> Cleanwatts Digital S.A.</a>, Coimbra,Portugal.             [03.01.2023 - Present]</li></h3>
-			<p style="text-align:justify"> Duties and Responsibilities,
-					<ol>
-						<li>Developing geospatial analysing tools and web GIS portals (2D/ 3D) to optimize the collection and managing the information about the energy communities.</li>
-						<li>Facilitating geospatial solutions to identify the suitable locations to use as renewable energy sites.</li>
-					</ol>
-			</p>
-		
+		<p style="text-align:justify"> Duties and Responsibilities,
+				<ul>
+					<li>Developing geospatial analysing tools and web GIS portals (2D/ 3D) to optimize the collection and managing the information about the energy communities.</li>
+					<li>Facilitating geospatial solutions to identify the suitable locations to use as renewable energy sites.</li>
+				</ul>
+		</p>		
 
-		<ol><h3><li>Geospatial Analyst,,<a href="https://staruplo.com/"> Staruplo</a>, SANJOTEC – Parque de Ciência e Tecnologia,Portugal.             [01.03.2021 - 01.01.2023]</li></h3>
+		<h3><li>Geospatial Analyst,,<a href="https://staruplo.com/"> Staruplo</a>, SANJOTEC – Parque de Ciência e Tecnologia,Portugal.             [01.03.2021 - 01.01.2023]</li></h3>
 		<p style="text-align:justify"> Staruplo is a Portuguese company based in Sao Joa de Madeira that provides artificial intelligence solutions and 
 					prototyping services in the fields of Geospatial Intelligence to promote the sustainability of our planet. In starupplo I worked as a 
 					Geospatial analyst at Staruplo to:
-				<ol>
+				<ul>
 					<li>Designed and developed geospatial solutions to address the global issues of public concern to improve life on Earth,
 						<li>Agriculture and Vegetation: Satellite image derived products to assess the vegetation health, water stress and estimate the yield of the agricultural sites.
 						<li>Prevention and Defence: To identify the flood, wildfire, and landside potential areas in Portugal</li>
@@ -62,7 +61,7 @@
 						<li>Urban planning: Providing geospatial solutions to identify and quantify urbanization to minimize urban sprawl </li>
 					<li>Served as the leader of the geospatial team to organize, manage the resources and examine the progress status of the projects.</li>
 					<li>Served as a proxy for communications between the website development, business, and geospatial teams.</li>
-				</ol>
+				</ul>
 		</p>
 
 		<h3><li>Assistant Lecturer, <a href="http://www.sab.ac.lk/geo/"> Faculty of Geomatics, Sabaragamuwa University of Sri Lanka.             [04.12.2017-01.09.2019] </a></li></h3>
@@ -72,13 +71,13 @@
 			 for geomatics related degrees in Sri lanka and is made of well qualified staff and the latest technological resources. In 2018, I was 
 			 promoted as an assistant lecturer in the Department Remote Sensing and GIS, the Faculty of Geomatics after serving as an academic supportive
 			  staff member in the same department for a year. my duties were included,
-			<ol>
+			<ul>
 				<li>Conducted supportive lectures and practical classes in Remote Sensing; Digital Image Processing; Satellite Technology; Fundamentals of GIS; 
 					Advanced Remote sensing; LiDAR Systems, Ground Penetration RADAR (GPR) and Applications; Fundamentals of Space Science; and Microwave Remote 
 					Sensing for undergraduates</li>
 				<li>Proctored examinations and led their preparatory workshops, providing class-pertinent materials</li>
 				<li>Worked as a resource person for software and instrument training/use, as well as a student counselor</li>
-			</ol> and the same time, I worked as a visiting intructor for the Master of Surveying science degree program conduct by the Faculty of Graduate studies  
+			</ul> and similarly, I worked as a visiting intructor for the Master of Surveying science degree program conduct by the Faculty of Graduate studies  
 			in Sabaragamuwa University of Sri Lanka</p>
 	
 
