--- a/index.html
+++ b/index.html
@@ -136,6 +136,46 @@
 
 	</section>
 
+	<!-- Section -->
+	<section>
+		<header class="major">
+			<h2>My Competencies</h2>
+		</header>
+		<div class="features">
+			<article>
+				<div class="content">
+					<h3>Core technical skills</h3>
+					<img src="images/technical/tech.png" style="width:275px;height:175px;"/>
+					<ul><li><b>Programming:</b> Python, MATLAB, HTML/CSS </li>
+						<li><b>Database: </b>PostgreSQL</li>
+						<li><b>GIS: </b> ArcGIS Dekstop and Online, QGIS, SuperMap, Google Earth, GeoDa, Surfer</li>
+						<li><b>Image Processing:</b> ERDAS Imagine, ENVI, SNAP, NEST, and PolSAR Pro, TerrSet</li>
+						<li><b>WebGIS Application Development:</b> Leaflet Maps, Map box</li>
+						<li><b>cloud-based platform: </b>Google earth engine, SentinelHub</li>
+						<li><b>sAdministration: </b>  Microsoft Office Suite</li>
+						<li><b>Libraries / Frameworks: </b>Arcpy, Follium, Pandas, NumPy, Matplotlib, PySAL, Keras, Tensorflow, etc.</li></ul>
+				</div>
+			</article>
+			<article>
+				<div class="content">
+					<h3>Soft skills</h3>
+					<img src="images/technical/soft.webp" style="width:275px;height:175px;"/>
+					<ul>
+						<li>Organization and Leadership Development</li>
+						<li>Strategic Planning and Assessment</li>
+						<li>Collaboration and Network Building</li>
+						<li>Team Building and Training</li>
+						<li>Project Management</li></ul>
+
+				</div>
+			</article>
+		</div>
+		<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/Y7ysaWvEIwg?start=10526&amp;end=10579" 
+		frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+		allowfullscreen></iframe>-->
+
+	</section>
+
 	<section>
 		<header class="major">
 			<h2>Awards</h2>
