--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
 					<img src="images/technical/tech.png" style="width:275px;height:175px;"/>
 					<ul><li><b>Programming:</b> Python, MATLAB, HTML/CSS </li>
 						<li><b>Database: </b>PostgreSQL</li>
-						<li><b>GIS: </b> ArcGIS Dekstop and Online, QGIS, SuperMap, Google Earth, GeoDa, Surfer</li>
+						<li><b>GIS: </b> ArcGIS Dekstop and Online, QGIS, SuperMap, Google Earth, Surfer</li>
 						<li><b>Image Processing:</b> ERDAS Imagine, ENVI, SNAP, NEST, and PolSAR Pro, TerrSet</li>
 						<li><b>WebGIS Application Development:</b> Leaflet Maps, Map box</li>
-						<li><b>cloud-based platform: </b>Google earth engine, SentinelHub</li>
+						<li><b>cloud-based platforms: </b>Google earth engine, SentinelHub</li>
 						<li><b>sAdministration: </b>  Microsoft Office Suite</li>
 						<li><b>Libraries / Frameworks: </b>Arcpy, Follium, Pandas, NumPy, Matplotlib, PySAL, Keras, Tensorflow, etc.</li></ul>
 				</div>
