--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 									<li><a href="projects.html">Projects</a></li>
 									
 									<li>
-										<span class="opener">Educational Institutes</span>
+										<span class="opener">Quick links</span>
 										<ul>
 											<li><a href="https://mastergeotech.info/">Erasmus Mundus joint master program</a></li>
 											<li><a href="http://www.sab.ac.lk/geo/">Sabaragamuwa Univeersity of Sri Lanka</a></li>
