--- a/index.html
+++ b/index.html
@@ -116,16 +116,16 @@
 				</div>
 			</article>
 			<article>
-				<img src="images/expertise/sur.jfif" style="width:175px;height:175px;"/>
+				<img src="images/expertise/data.jpg" style="width:175px;height:175px;"/>
 				<div class="content">
-					<h3>Surveying</h3>
+					<h3>Data Science</h3>
 					<p></p>
 				</div>
 			</article>
 			<article>
-				<img src="images/expertise/pro.png" style="width:175px;height:175px;"/>
+				<img src="images/expertise/machle.jpg" style="width:175px;height:175px;"/>
 				<div class="content">
-					<h3>Photogrammetry</h3>
+					<h3>Machine Learning</h3>
 					<p></p>
 				</div>
 			</article>
