--- a/work.html
+++ b/work.html
@@ -44,27 +44,34 @@
 		<ol><h3><li>Data Analyst Engineer,<a href="https://portugal.cleanwatts.energy/?campaign_source=f4e165e4-1c60-ed11-9561-6045bd8f91d8&gclid=Cj0KCQiAgaGgBhC8ARIsAAAyLfG8Ougne0QoMcDDlL7_K-dtHqkjnv2kslDn8v1S6EIT09eLPedyp-saAq9MEALw_wcB"> Cleanwatts Digital S.A.</a>, Coimbra,Portugal.             [03.01.2023 - Present]</li></h3>
 		<p style="text-align:justify"> Duties and Responsibilities,
 				<ul>
-					<li>Developing geospatial analysing tools and web GIS portals (2D/ 3D) to optimize the collection and managing the information about the energy communities.</li>
-					<li>Facilitating geospatial solutions to identify the suitable locations to use as renewable energy sites.</li>
+					<li>Providing geospatial solutions to identify optimal locations and hot spots for renewable energy sites. </li>
+					<li>Creating AI forecast models to optimize battery systems within solar communities, predicting production and load requirements. </li>
+					<li>Developed a data ingestion process to automate the transfer of data from multiple sources into a single PostgreSQL database. </li> 
+					<li>Designing data analysis tools and web portals to efficiently collect, manage, and display information to the clients.</li>
 				</ul>
 		</p>		
 
-		<h3><li>Geospatial Analyst,,<a href="https://staruplo.com/"> Staruplo</a>, SANJOTEC – Parque de Ciência e Tecnologia,Portugal.             [01.03.2021 - 01.01.2023]</li></h3>
+		<h3><li>Geospatial Analyst,,<a href="https://staruplo.com/"> Staruplo</a>, SANJOTEC – Parque de Ciência e Tecnologia,Portugal.             [01.03.2021 - 31.10.2022]</li></h3>
 		<p style="text-align:justify"> Staruplo is a Portuguese company based in Sao Joa de Madeira that provides artificial intelligence solutions and 
 					prototyping services in the fields of Geospatial Intelligence to promote the sustainability of our planet. In starupplo I worked as a 
 					Geospatial analyst to 
 					<ul>
-						<li>Designed and developed geospatial solutions in the fields of,</li>
+						<li>Develop sustainable solutions to address the global issues of public concern to improve life on Earth (Research based projects in 
+							collaboration with European space agency),</li>
 						<li style="list-style-type:none">
 							<ul>
-								<li>Agriculture and Vegetation: Satellite image derived products to assess the vegetation health, water stress and estimate the yield of the agricultural sites.
-								<li>Prevention and Defence: To identify the flood, wildfire, and landside potential areas in Portugal</li>
-								<li>Climate change and renewable energy: Facilitating geospatial solutions to make use of renewable energies such as solar and wind farms to minimize the world's rapid climate changes.</li>
-								<li>Urban planning: Providing geospatial solutions to identify and quantify urbanization to minimize urban sprawl </li> 
+								<li><b>Agriculture and Vegetation:</b> Satellite image derived products to assess the vegetation health, water content and estimate the yield of the agricultural sites. </li>
+								<li><b>Environmental disaster risk: </b> Identify the flood, wildfire, and landside potential areas in Portugal.</li>
+								<li><b>Climate change and renewable energy:</b> Site suitability assessment for identification of solar, wind and hydro power plants.</li>
+								<li><b>Urban planning:</b> Analyse and identify to quantify urbanization and land use change to minimize urban sprawl and spatial planning.</li> 
+								<li><b>Tourism and recreation:</b> Identify tourist hotspots using social media data and identify suitable locations to establish observation points.</li> 
 							</ul>
 						</li>
-						<li>Served as the leader of the geospatial team to organize, manage the resources and examine the progress status of the projects.</li>
-						<li>Served as a proxy for communications between the website development, business, and geospatial teams.</li>
+						<li>Employed Geographic Information Systems (GIS) for the storage, analysis, and visualization of geospatial data in order to derive insights to meet business needs.</li>
+						<li>Automate the project methodologies (Python) and calculations developed with Microsoft Excel to enable automatic updates of the project results.</li>
+						<li>Create web-based statistical dashboards for statistical data visualization.</li>
+						<li>Develop CNN-based Machine learning models for feature identification, extraction and classification.</li>
+						<li>Establishing a comprehensive geo data collection and storage system to ensure easy access to data within the company.</li>
 					</ul>
 		</p>
 
